--- a/src/assets/sass/custom-styles.scss
+++ b/src/assets/sass/custom-styles.scss
@@ -252,7 +252,7 @@ button.swal2-cancel.swal2-styled:hover {
     text-align: left;
 }
 
-.dropdown-menu {
+.search-form .dropdown-menu {
     height: 400px;
     overflow-y: scroll;
 }
