--- a/src/app/components/admin/my-products/my-products.component.html
+++ b/src/app/components/admin/my-products/my-products.component.html
@@ -243,7 +243,6 @@
                 <div class="form-group">
                     <label>Select location (Drag and drop the red marker <i style="color: red;"
                             class="fa fa-map-marker"></i> on your location)</label>
-                    1
                     <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [disableDefaultUI]="false"
                         [zoomControl]="true" [scrollwheel]="null" [gestureHandling]="'cooperative'"
                         (mapClick)="mapClicked($event)">
@@ -399,13 +398,17 @@
             <div class="form-group">
                 <label>Add sub images for the product. (Max 5 images)</label>
                 <br>
-                <input type="file" accept="image/*" (change)="fileChangeEventSubImage($event)" />
+                <input type="file" accept="image/*" (change)="fileChangeEventSubImage($event)" multiple />
                 <br>
                 <span class="text text-danger" [innerHtml]="showSubImagesError"></span>
                 <div class="subImagesList" style="margin-top: 10px;">
-                    <div class="" *ngFor="let image of subImagesList; let i = index">
+                    <div class="" *ngFor="let image of subImagesListNew; let i = index">
                         <img [src]="image.data" width="200">
-                        <span (click)="deleteSubImage(i)" title="Remove"><i class="fa fa-trash"></i></span>
+                        <span (click)="deleteSubImageNew(i)" title="Remove"><i class="fa fa-trash"></i></span>
+                    </div>
+                    <div class="" *ngFor="let image of subImagesList; let i = index">
+                        <img [src]="imagePath+image.location" width="200">
+                        <span (click)="deleteSubImage(i, image.id)" title="Remove"><i class="fa fa-trash"></i></span>
                     </div>
                 </div>
             </div>
