--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -60,7 +60,7 @@
         top: 50%;
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
-        width: 100%;
+        // width: 100%;
     }
 }
 
