--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -42,7 +42,7 @@
                         <p>{{product.description|titlecase}}</p>
                         <br>
                         <div class="flex">
-                            <h2 class="price margin-b-0">{{price}}</h2>
+                            <h2 class="price margin-b-0">{{"Rs. "+ price}}</h2>
                             &nbsp;&nbsp;
                             <h5 class="price margin-b-0">{{product.rentable_item? 'Per month':''}}</h5>
                         </div>
