--- a/src/app/components/cart/cart.component.scss
+++ b/src/app/components/cart/cart.component.scss
@@ -66,6 +66,12 @@
     span.delete {
         position: absolute;
         right: 0;
-        bottom: 0;
+        top: 45px;
+    }
+
+    span.edit {
+        position: absolute;
+        right: 0;
+        top: 0;
     }
 }
