Show collected items in my-orders page

--- a/src/assets/sass/custom-styles.scss
+++ b/src/assets/sass/custom-styles.scss
@@ -207,6 +207,10 @@ button.swal2-cancel.swal2-styled:hover {
     margin-bottom: 10px;
 }
 
+.mb-40 {
+    margin-bottom: 40px;
+}
+
 .font-bold {
     font-weight: bold;
 }
