--- a/src/app/components/admin/my-products/my-products.component.html
+++ b/src/app/components/admin/my-products/my-products.component.html
@@ -280,12 +280,11 @@
             </div>
             <div class="form-group">
                 <label>WhatsApp number <img src="../../../assets/img/WhatsApp.png" width="25">
-                    <p class="font-s-10">(Enter 9 numbers without 0. Ex: 710422547)</p>
                 </label>
                 <div class="flex">
                     +94&nbsp;
                     <div style="width: 100%;">
-                        <input type="text" class="form-control" formControlName="phone" id="phone"
+                        <input type="text" class="form-control" formControlName="phone" id="phone" disabled
                             placeholder="Enter 9 digits phone number">
                     </div>
                 </div>
