--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -39,6 +39,10 @@
 
                 <!-- admin only pages -->
                 <li class="nav-item" *ngIf="isLoggedInUser && (isAdmin || isShopAdmin)">
+                    <a routerLink="/admin/orders" class="nav-link">
+                        <i class="nc-icon nc-app"></i> My Orders</a>
+                </li>
+                <li class="nav-item" *ngIf="isLoggedInUser && (isAdmin || isShopAdmin)">
                     <a routerLink="/admin/shops" class="nav-link">
                         <i class="nc-icon nc-shop"></i> My Shops</a>
                 </li>
