--- a/src/app/components/admin/my-orders/my-orders.component.html
+++ b/src/app/components/admin/my-orders/my-orders.component.html
@@ -1,17 +1,86 @@
 <div class="wrapper">
     <div class="container cart">
-        <h3>Yet to be collected</h3>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <form [formGroup]="orderSearchForm">
+                        <div class="row">
+                            <div class="col-sm-4 col-xs-12">
+                                <label>Shop</label>
+                                <select class="browser-default custom-select form-control" formControlName="shopId"
+                                    (change)="onShopChange()" id="shopId">
+                                    <option selected value="">Select option</option>
+                                    <option *ngFor="let shop of shops" value="{{shop.id}}">
+                                        {{shop.name|titlecase}},&nbsp;{{shop.city.name}}
+                                    </option>
+                                </select>
+                            </div>
+                            <div class="col-sm-4 col-xs-12">
+                                <label>Status</label>
+                                <select class="browser-default custom-select form-control" formControlName="status"
+                                    id="status">
+                                    <option [selected]="true" value="not-collected">Not collected</option>
+                                    <option value="collected">Collected</option>
+                                </select>
+                            </div>
+                            <div class="col-sm-4 col-xs-12">
+                                <label>Date</label>
+                                <div class="input-group">
+                                    <input class="form-control" placeholder="yyyy-mm-dd" name="dp" [(ngModel)]="date"
+                                        ngbDatepicker #d="ngbDatepicker" [ngModelOptions]="{standalone: true}" />
+                                    <button class="btn btn-outline-secondary bi bi-calendar3" (click)="d.toggle()"
+                                        type="button"></button>
+                                </div>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-sm-4 col-xs-12">
+                                <label>Order No.</label>
+                                <input class=" form-control" type="text" placeholder="Order No"
+                                    formControlName="orderNo">
+                            </div>
+                            <div class="col-sm-4 col-xs-12"
+                                [title]="isProductsListDisabled?'Select a shop to show the products':''">
+                                <label>
+                                    Product {{isProductsListDisabled?'(Select a shop to show the products)':''}}
+                                </label>
+                                <ng-select class="custom form-control browser-default" [items]="products"
+                                    [disabled]="isProductsListDisabled" bindLabel="name" bindValue="id"
+                                    [(ngModel)]="selectedProduct" [ngModelOptions]="{standalone: true}">
+                                </ng-select>
+                            </div>
+                            <div class="col-sm-4 col-xs-12">
+                                <label>Customer phone (9 digits)</label>
+                                <input class=" form-control" type="text" placeholder="702223344"
+                                    formControlName="phone">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div style="display: block;">
+            <div class="row">
+                <div class="col-sm-12">
+                    <button type="button" class="btn btn-warning btn float-right" (click)="filterOrders()"
+                        replaceText="Searching" [spinnerButton]="isSearching">Search</button>
+                </div>
+            </div>
+        </div>
+        <br>
         <div class="row">
-            <div class="col-md-12">
-                <div class="card-normal no-decorations mb-40" *ngFor="let shop of unCollectedOrderItems.shops">
+            <div class="col-md-12" *ngIf="orderItems.users.length>0">
+                <div class="card-normal no-decorations mb-40" *ngFor="let user of orderItems.users">
                     <div class="row">
                         <div class="col-md-6">
-                            <h4><b>{{shop.name}}</b></h4>
+                            <h4><b>{{user.name}}</b></h4>
                         </div>
                         <div class="col-md-6 text-right">
-                            <a href="tel:{{shop.phone}}">{{shop.phone}}</a>
-                            <p>{{shop.address}}</p>
-                            <a href="https://www.google.com/maps/dir/{{shop.latitude}},{{shop.longitude}}"
+                            <a href="tel:{{user.phone}}">{{user.phone}}</a>
+                            <p>{{user.address}}</p>
+                            <a href="https://www.google.com/maps/dir/{{user.latitude}},{{user.longitude}}"
                                 target="_blank">
                                 <button type="button" class="btn btn-outline-info btn-sm">
                                     Open item location in Google map
@@ -20,7 +89,7 @@
                         </div>
                     </div>
                     <br>
-                    <div class="card-normal no-decorations" *ngFor="let orderItem of shop.orderItems">
+                    <div class="card-normal no-decorations" *ngFor="let orderItem of user.orderItems">
                         <div class="row product">
                             <div class="col-md-3">
                                 <div style="background-image: url('{{imagePath + orderItem.location}}');
@@ -36,133 +105,15 @@
                                 <p class="price">{{orderItem.quantity * orderItem.price| currency:"Rs. "}}</p>
                             </div>
                             <div class="col-md-4">
-                                Order date: {{orderItem.order_created_at | date: 'yyyy/MM/dd hh.mm a' }}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card-normal no-decorations mb-40" *ngFor="let user of unCollectedOrderItems.users">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h4><b>{{user.name}}</b></h4>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="card-normal no-decorations" *ngFor="let orderItem of user.orderItems">
-                        <div class="row product">
-                            <div class="col-md-3">
-                                <div style="background-image: url('{{imagePath + orderItem.location}}');
-                            background-repeat: no-repeat;
-                            background-position: center;
-                            background-size: cover;
-                            width: 100%;height: 120px;">
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <p>Quantity: {{orderItem.quantity}}</p>
-                                <p *ngIf="orderItem.duration">Duration: {{orderItem.duration}} month(s)</p>
-                                <p class="price">{{orderItem.quantity * orderItem.price| currency:"Rs. "}}</p>
-                            </div>
-                            <div class="col-md-5">
-                                Order date: {{orderItem.order_created_at | date: 'yyyy/MM/dd hh.mm a' }}
-                                <br>
-                                <a href="tel:{{orderItem.phone}}">{{orderItem.phone}}</a>
-                                <p>{{orderItem.address}}</p>
-                                <a href="https://www.google.com/maps/dir/{{orderItem.latitude}},{{orderItem.longitude}}"
-                                    target="_blank">
-                                    <button type="button" class="btn btn-outline-info btn-sm">
-                                        Open item location in Google map
-                                    </button>
-                                </a>
+                                <p>Order No: {{orderItem.order_id}}</p>
+                                <span>Order date: {{orderItem.order_created_at | date: 'yyyy/MM/dd hh.mm a' }}</span>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <br>
-        <br>
-        <h3>Previous orders</h3>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card-normal no-decorations mb-40" *ngFor="let shop of collectedOrderItems.shops">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h4><b>{{shop.name}}</b></h4>
-                        </div>
-                        <div class="col-md-6 text-right">
-                            <a href="tel:{{shop.phone}}">{{shop.phone}}</a>
-                            <p>{{shop.address}}</p>
-                            <a href="https://www.google.com/maps/dir/{{shop.latitude}},{{shop.longitude}}"
-                                target="_blank">
-                                <button type="button" class="btn btn-outline-info btn-sm">
-                                    Open item location in Google map
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="card-normal no-decorations" *ngFor="let orderItem of shop.orderItems">
-                        <div class="row product">
-                            <div class="col-md-3">
-                                <div style="background-image: url('{{imagePath + orderItem.location}}');
-                            background-repeat: no-repeat;
-                            background-position: center;
-                            background-size: cover;
-                            width: 100%;height: 100px;">
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <p>Quantity: {{orderItem.quantity}}</p>
-                                <p *ngIf="orderItem.duration">Duration: {{orderItem.duration}} month(s)</p>
-                                <p class="price">{{orderItem.quantity * orderItem.price| currency:"Rs. "}}</p>
-                            </div>
-                            <div class="col-md-4">
-                                Order date: {{orderItem.order_created_at | date: 'yyyy/MM/dd hh.mm a' }}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <br>
-
-                <div class="card-normal no-decorations mb-40" *ngFor="let user of collectedOrderItems.users">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h4><b>{{user.name}}</b></h4>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="card-normal no-decorations" *ngFor="let orderItem of user.orderItems">
-                        <div class="row product">
-                            <div class="col-md-3">
-                                <div style="background-image: url('{{imagePath + orderItem.location}}');
-                            background-repeat: no-repeat;
-                            background-position: center;
-                            background-size: cover;
-                            width: 100%;height: 120px;">
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <p>Quantity: {{orderItem.quantity}}</p>
-                                <p *ngIf="orderItem.duration">Duration: {{orderItem.duration}} month(s)</p>
-                                <p class="price">{{orderItem.quantity * orderItem.price| currency:"Rs. "}}</p>
-                            </div>
-                            <div class="col-md-5">
-                                Order date: {{orderItem.order_created_at | date: 'yyyy/MM/dd hh.mm a' }}
-                                <br>
-                                <a href="tel:{{orderItem.phone}}">{{orderItem.phone}}</a>
-                                <p>{{orderItem.address}}</p>
-                                <a href="https://www.google.com/maps/dir/{{orderItem.latitude}},{{orderItem.longitude}}"
-                                    target="_blank">
-                                    <button type="button" class="btn btn-outline-info btn-sm">
-                                        Open item location in Google map
-                                    </button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-md-12" *ngIf="orderItems.users.length==0">
+                <h3>No Orders Found.</h3>
             </div>
         </div>
     </div>
