--- a/src/app/components/Auth/admin-signup/admin-signup.component.html
+++ b/src/app/components/Auth/admin-signup/admin-signup.component.html
@@ -49,6 +49,36 @@
                             <p *ngIf="!signUpForm.controls.phone.errors.pattern" class="form-error">
                                 Phone number format invalid</p>
                         </div>
+
+                        <div class="form-group margin-b-0">
+                            <label class="flex">
+                                Account type
+                                <i #accountHelpModal (click)="openAccountHelpModal(content)"
+                                    title="Click here to show more details" class="pointer nc-icon nc-alert-circle-i"
+                                    style="margin-left:5px"></i>
+                            </label>
+                            <div class="flex" formGroupName="accountType">
+                                <div class="form-check">
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="checkbox" value="shop"
+                                            formControlName="shop">
+                                        Shop
+                                        <span class="form-check-sign"></span>
+                                    </label>
+                                </div>
+                                <div class="form-check margin-left-30">
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="checkbox" value="personal"
+                                            formControlName="personal">
+                                        Personal
+                                        <span class="form-check-sign"></span>
+                                    </label>
+                                </div>
+                            </div>
+                            <div *ngIf="isSubmitted && accountTypeValidationError">
+                                <p class="form-error">Please select at least one account type</p>
+                            </div>
+                        </div>
                         <label>Email</label>
                         <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
                             <div class="input-group-prepend">
@@ -107,3 +137,27 @@
         </div>
     </div>
 </div>
+<ng-template #content let-modal>
+    <div class="modal-header">
+        <h4 class="modal-title text-center">Account Type</h4>
+        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss()">
+            <span aria-hidden="">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <ul>
+            <li>
+                <b>Shop:</b> If your purpose is to list your shop items, you can use "Shop" account type.
+            </li>
+            <li>
+                <b>Personal:</b> If you only have personal items to list, use "Personal" account type.
+            </li>
+        </ul>
+        <p>Note: If you wish to list both Shop items and personal items, please select both account types.</p>
+    </div>
+    <div class="modal-footer text-center" style="display: inline-block;">
+        <div class="">
+            <button type="button" class="btn btn-default btn-link" (click)="modal.close()">OK</button>
+        </div>
+    </div>
+</ng-template>
