Show item name on orders and filter customer portal orders by order status

--- a/src/app/components/admin/my-orders/my-orders.component.html
+++ b/src/app/components/admin/my-orders/my-orders.component.html
@@ -125,6 +125,7 @@
                                 </div>
                             </div>
                             <div class="col-md-2">
+                                <h4 class="margin-b-0">{{orderItem.name}}</h4>
                                 <p>Quantity: {{orderItem.quantity}}</p>
                                 <p *ngIf="orderItem.duration">Duration: {{orderItem.duration}} month(s)</p>
                                 <p class="price">{{orderItem.quantity * orderItem.price| currency:"Rs. "}}</p>
