--- a/src/app/components/my-orders/my-orders.component.html
+++ b/src/app/components/my-orders/my-orders.component.html
@@ -1,9 +1,42 @@
 <div class="wrapper">
     <div class="container cart">
-        <h3>Yet to be collected</h3>
+        <form [formGroup]="orderSearchForm">
+            <div class="row">
+                <div class="col-sm-6 col-xs-12">
+                    <div class="form-group radio-group">
+                        <div class="form-control no-border" id="listingCategory">
+                            <div class="row">
+                                <div class="col-sm-5 radio">
+                                    <div class="form-check-radio">
+                                        <label class="form-check-label">
+                                            <input class="form-check-input form-control" type="radio"
+                                                value="un-collected" formControlName="orderStatus"
+                                                (change)="fetchOrders()">
+                                            Not collected orders
+                                            <span class="form-check-sign"></span>
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 radio">
+                                    <div class="form-check-radio">
+                                        <label class="form-check-label">
+                                            <input class="form-check-input form-control" type="radio" value="collected"
+                                                formControlName="orderStatus" (change)="fetchOrders()">
+                                            Collected orders
+                                            <span class="form-check-sign"></span>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+
         <div class="row">
             <div class="col-md-12">
-                <div class="card-normal no-decorations mb-40" *ngFor="let shop of unCollectedOrderItems.shops">
+                <div class="card-normal no-decorations mb-40" *ngFor="let shop of orderItems.shops">
                     <div class="row">
                         <div class="col-md-6">
                             <h4><b>{{shop.name}}</b></h4>
@@ -31,18 +64,21 @@
                                 </div>
                             </div>
                             <div class="col-md-4">
+                                <h4 class="margin-b-0">{{orderItem.name}}</h4>
                                 <p>Quantity: {{orderItem.quantity}}</p>
                                 <p *ngIf="orderItem.duration">Duration: {{orderItem.duration}} month(s)</p>
                                 <p class="price">{{orderItem.quantity * orderItem.price| currency:"Rs. "}}</p>
                             </div>
                             <div class="col-md-4">
-                                Order date: {{orderItem.order_created_at | date: 'yyyy/MM/dd hh.mm a' }}
+                                <b>Order Id:</b> {{orderItem.order_id}}
+                                <br>
+                                <b>Order date:</b> {{orderItem.order_created_at | date: 'yyyy/MM/dd hh.mm a' }}
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="card-normal no-decorations mb-40" *ngFor="let user of unCollectedOrderItems.users">
+                <div class="card-normal no-decorations mb-40" *ngFor="let user of orderItems.users">
                     <div class="row">
                         <div class="col-md-6">
                             <h4><b>{{user.name}}</b></h4>
@@ -63,96 +99,15 @@
                                 </div>
                             </div>
                             <div class="col-md-4">
+                                <h4 class="margin-b-0">{{orderItem.name}}</h4>
                                 <p>Quantity: {{orderItem.quantity}}</p>
                                 <p *ngIf="orderItem.duration">Duration: {{orderItem.duration}} month(s)</p>
                                 <p class="price">{{orderItem.quantity * orderItem.price| currency:"Rs. "}}</p>
                             </div>
                             <div class="col-md-5">
-                                Order date: {{orderItem.order_created_at | date: 'yyyy/MM/dd hh.mm a' }}
+                                <b>Order Id:</b> {{orderItem.order_id}}
                                 <br>
-                                <a href="tel:{{orderItem.phone}}">{{orderItem.phone}}</a>
-                                <p>{{orderItem.address}}</p>
-                                <a href="https://www.google.com/maps/dir/{{orderItem.latitude}},{{orderItem.longitude}}"
-                                    target="_blank">
-                                    <button type="button" class="btn btn-outline-info btn-sm">
-                                        Open item location in Google map
-                                    </button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <br>
-        <br>
-        <h3>Previous orders</h3>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card-normal no-decorations mb-40" *ngFor="let shop of collectedOrderItems.shops">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h4><b>{{shop.name}}</b></h4>
-                        </div>
-                        <div class="col-md-6 text-right">
-                            <a href="tel:{{shop.phone}}">{{shop.phone}}</a>
-                            <p>{{shop.address}}</p>
-                            <a href="https://www.google.com/maps/dir/{{shop.latitude}},{{shop.longitude}}"
-                                target="_blank">
-                                <button type="button" class="btn btn-outline-info btn-sm">
-                                    Open item location in Google map
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="card-normal no-decorations" *ngFor="let orderItem of shop.orderItems">
-                        <div class="row product">
-                            <div class="col-md-3">
-                                <div style="background-image: url('{{imagePath + orderItem.location}}');
-                            background-repeat: no-repeat;
-                            background-position: center;
-                            background-size: cover;
-                            width: 100%;height: 100px;">
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <p>Quantity: {{orderItem.quantity}}</p>
-                                <p *ngIf="orderItem.duration">Duration: {{orderItem.duration}} month(s)</p>
-                                <p class="price">{{orderItem.quantity * orderItem.price| currency:"Rs. "}}</p>
-                            </div>
-                            <div class="col-md-4">
-                                Order date: {{orderItem.order_created_at | date: 'yyyy/MM/dd hh.mm a' }}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <br>
-
-                <div class="card-normal no-decorations mb-40" *ngFor="let user of collectedOrderItems.users">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h4><b>{{user.name}}</b></h4>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="card-normal no-decorations" *ngFor="let orderItem of user.orderItems">
-                        <div class="row product">
-                            <div class="col-md-3">
-                                <div style="background-image: url('{{imagePath + orderItem.location}}');
-                            background-repeat: no-repeat;
-                            background-position: center;
-                            background-size: cover;
-                            width: 100%;height: 120px;">
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <p>Quantity: {{orderItem.quantity}}</p>
-                                <p *ngIf="orderItem.duration">Duration: {{orderItem.duration}} month(s)</p>
-                                <p class="price">{{orderItem.quantity * orderItem.price| currency:"Rs. "}}</p>
-                            </div>
-                            <div class="col-md-5">
-                                Order date: {{orderItem.order_created_at | date: 'yyyy/MM/dd hh.mm a' }}
+                                <b>Order date:</b> {{orderItem.order_created_at | date: 'yyyy/MM/dd hh.mm a' }}
                                 <br>
                                 <a href="tel:{{orderItem.phone}}">{{orderItem.phone}}</a>
                                 <p>{{orderItem.address}}</p>
